--- a/seller/course-portal/package.json
+++ b/seller/course-portal/package.json
@@ -2,6 +2,7 @@
   "name": "courses-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/courseportal",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
