--- a/eua/af-my-buddy-flutter-app/android/app/src/main/AndroidManifest.xml
+++ b/eua/af-my-buddy-flutter-app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dsep_reference_flutter">
+    package="com.example.my_buddy">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+
    <application
-        android:label="dsep_reference_flutter"
+        android:label="My Buddy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
