--- a/eua/af-my-buddy-flutter-app/ios/Runner/Info.plist
+++ b/eua/af-my-buddy-flutter-app/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>dsep_reference_flutter</string>
+	<string>my_buddy</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
