--- a/eua/af-my-buddy-flutter-app/web/manifest.json
+++ b/eua/af-my-buddy-flutter-app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dsep_reference_flutter",
-    "short_name": "dsep_reference_flutter",
+    "name": "my_buddy",
+    "short_name": "my_buddy",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
