--- a/eua/af-my-buddy-flutter-app/pubspec.yaml
+++ b/eua/af-my-buddy-flutter-app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dsep_reference_flutter
+name: my_buddy
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -47,6 +47,8 @@ dependencies:
   flutter_spinkit: ^5.0.0
   uuid: ^3.0.7
   lottie: ^2.2.0
+  flutter_launcher_icons: ^0.12.0
+  rxdart: ^0.27.7
   # openapi_generator: ^4.0.0
   
 dev_dependencies:
@@ -55,7 +57,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   chopper_generator: ^6.0.0
   json_serializable: ^6.6.1
-  swagger_dart_code_generator: ^2.10.0
+  swagger_dart_code_generator: ^2.10.2
   # openapi_generator_annotations: ^4.0.0
   realm: ^1.0.1
 
