--- a/eua/af-my-buddy-flutter-app/windows/runner/Runner.rc
+++ b/eua/af-my-buddy-flutter-app/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "dsep_reference_flutter" "\0"
+            VALUE "FileDescription", "my_buddy" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "dsep_reference_flutter" "\0"
+            VALUE "InternalName", "my_buddy" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "dsep_reference_flutter.exe" "\0"
-            VALUE "ProductName", "dsep_reference_flutter" "\0"
+            VALUE "OriginalFilename", "my_buddy.exe" "\0"
+            VALUE "ProductName", "my_buddy" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
